[package]
name = "multifix"
version = "0.1.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]

[dependencies]
colored = "1.6.1"
failure = "0.1.3"
human-panic = "1.0.1"
ignore = "0.4.4"
lazy_static = "1.2.0"
rayon = "1.0.3"
regex = "1.1.0"
webbrowser = "0.3.1"

[dependencies.cursive]
version = "0.10.0"
#default-features = false
#features = ["termion-backend"]
